--- a/cfg/pointnav.yaml
+++ b/cfg/pointnav.yaml
@@ -24,3 +24,8 @@ TASK:
   MEASUREMENTS: ['DISTANCE_TO_GOAL', 'SUCCESS', 'SPL']
   SUCCESS:
     SUCCESS_DISTANCE: 0.2
+DATASET:
+  TYPE: PointNav-v1
+  SPLIT: train
+  DATA_PATH: /root/habitat-lab/data/datasets/pointnav/habitat-test-scenes/v1/{split}/{split}.json.gz
+  SCENES_DIR: /root/habitat-lab/data/scene_datasets
