Publish agent map as image for render server

--- a/cfg/pointnav.yaml
+++ b/cfg/pointnav.yaml
@@ -1,6 +1,7 @@
 ENVIRONMENT:
-  MAX_EPISODE_STEPS: 500
+  MAX_EPISODE_STEPS: 50
 SIMULATOR:
+  FORWARD_STEP_SIZE: 0.5
   AGENT_0:
     SENSORS: ['RGB_SENSOR']
   HABITAT_SIM_V0:
@@ -14,6 +15,7 @@ SIMULATOR:
 TASK:
   TYPE: Nav-v0
   SUCCESS_DISTANCE: 0.2
+  POSSIBLE_ACTIONS: ["MOVE_FORWARD", "TURN_LEFT", "TURN_RIGHT"]
 
   SENSORS: ['POINTGOAL_WITH_GPS_COMPASS_SENSOR']
   POINTGOAL_WITH_GPS_COMPASS_SENSOR:
@@ -21,7 +23,7 @@ TASK:
     DIMENSIONALITY: 2
   GOAL_SENSOR_UUID: pointgoal_with_gps_compass
 
-  MEASUREMENTS: ['DISTANCE_TO_GOAL', 'SUCCESS', 'SPL']
+  MEASUREMENTS: ['DISTANCE_TO_GOAL', 'SUCCESS', 'SPL', 'TOP_DOWN_MAP']
   SUCCESS:
     SUCCESS_DISTANCE: 0.2
 DATASET:
