--- a/cfg/pointnav.yaml
+++ b/cfg/pointnav.yaml
@@ -3,15 +3,24 @@ ENVIRONMENT:
 SIMULATOR:
   FORWARD_STEP_SIZE: 0.5
   AGENT_0:
-    SENSORS: ['RGB_SENSOR']
+    SENSORS: ['DEPTH_SENSOR', 'SEMANTIC_SENSOR']
   HABITAT_SIM_V0:
     GPU_DEVICE_ID: 0
   RGB_SENSOR:
-    WIDTH: 256
-    HEIGHT: 256
+    WIDTH: 320
+    HEIGHT: 320
+    HFOV: 79
+    POSITION: [0, 0.88, 0]
   DEPTH_SENSOR:
-    WIDTH: 256
-    HEIGHT: 256
+    WIDTH: 320
+    HEIGHT: 320
+    HFOV: 79
+    POSITION: [0, 0.88, 0]
+  SEMANTIC_SENSOR:
+    WIDTH: 320
+    HEIGHT: 320
+    HFOV: 79
+    POSITION: [0, 0.88, 0]
 TASK:
   TYPE: Nav-v0
   SUCCESS_DISTANCE: 0.2
