--- a/cfg/objectnav_mp3d_train_autoencoder.yaml
+++ b/cfg/objectnav_mp3d_train_autoencoder.yaml
@@ -34,7 +34,7 @@ TASK:
   POSSIBLE_ACTIONS: ["MOVE_FORWARD", "TURN_LEFT", "TURN_RIGHT", "LOOK_UP", "LOOK_DOWN"]
   SUCCESS_DISTANCE: 0.0
 
-  SENSORS: []
+  SENSORS: ['OBJECTGOAL_SENSOR', 'COMPASS_SENSOR', 'GPS_SENSOR']
   GOAL_SENSOR_UUID: objectgoal
 
   MEASUREMENTS: ['DISTANCE_TO_GOAL', 'SUCCESS', 'SPL', 'SOFT_SPL']
