--- a/cfg/objectnav_mp3d_debug_autoencoder.yaml
+++ b/cfg/objectnav_mp3d_debug_autoencoder.yaml
@@ -6,7 +6,7 @@ SIMULATOR:
   TILT_ANGLE: 30
   ACTION_SPACE_CONFIG: "v1"
   AGENT_0:
-    SENSORS: ['DEPTH_SENSOR', 'SEMANTIC_SENSOR']
+    SENSORS: ['RGB_SENSOR', 'DEPTH_SENSOR', 'SEMANTIC_SENSOR']
     HEIGHT: 0.88
     RADIUS: 0.18
   HABITAT_SIM_V0:
