Progress to real training

--- a/cfg/objectnav_mp3d_train_autoencoder.yaml
+++ b/cfg/objectnav_mp3d_train_autoencoder.yaml
@@ -1,12 +1,12 @@
 ENVIRONMENT:
-  MAX_EPISODE_STEPS: 10
+  MAX_EPISODE_STEPS: 100
 
 SIMULATOR:
   TURN_ANGLE: 30
   TILT_ANGLE: 30
   ACTION_SPACE_CONFIG: "v1"
   AGENT_0:
-    SENSORS: ['DEPTH_SENSOR', 'SEMANTIC_SENSOR']
+    SENSORS: ['RGB_SENSOR', 'DEPTH_SENSOR', 'SEMANTIC_SENSOR']
     HEIGHT: 0.88
     RADIUS: 0.18
   HABITAT_SIM_V0:
