--- a/cfg/objectnav_mp3d_human.yaml
+++ b/cfg/objectnav_mp3d_human.yaml
@@ -1,5 +1,5 @@
 ENVIRONMENT:
-  MAX_EPISODE_STEPS: 10
+  MAX_EPISODE_STEPS: 100
 
 SIMULATOR:
   TURN_ANGLE: 30
@@ -31,7 +31,7 @@ SIMULATOR:
     POSITION: [0, 0.88, 0]
 TASK:
   TYPE: ObjectNav-v1
-  POSSIBLE_ACTIONS: ["MOVE_FORWARD", "TURN_LEFT", "TURN_RIGHT", "LOOK_UP", "LOOK_DOWN"]
+  POSSIBLE_ACTIONS: ["MOVE_FORWARD", "TURN_LEFT", "TURN_RIGHT", "LOOK_UP", "LOOK_DOWN", "STOP"]
   SUCCESS_DISTANCE: 0.0
 
   SENSORS: ['OBJECTGOAL_SENSOR', 'COMPASS_SENSOR', 'GPS_SENSOR']
