--- a/cfg/objectnav_mp3d_human.yaml
+++ b/cfg/objectnav_mp3d_human.yaml
@@ -1,5 +1,5 @@
 ENVIRONMENT:
-  MAX_EPISODE_STEPS: 100
+  MAX_EPISODE_STEPS: 500
 
 SIMULATOR:
   TURN_ANGLE: 30
@@ -32,17 +32,17 @@ SIMULATOR:
 TASK:
   TYPE: ObjectNav-v1
   POSSIBLE_ACTIONS: ["MOVE_FORWARD", "TURN_LEFT", "TURN_RIGHT", "LOOK_UP", "LOOK_DOWN", "STOP"]
-  SUCCESS_DISTANCE: 0.0
+  SUCCESS_DISTANCE: 0.1
 
   SENSORS: ['OBJECTGOAL_SENSOR', 'COMPASS_SENSOR', 'GPS_SENSOR']
   GOAL_SENSOR_UUID: objectgoal
 
-  MEASUREMENTS: ['DISTANCE_TO_GOAL', 'SUCCESS', 'SPL', 'SOFT_SPL']
+  MEASUREMENTS: ['DISTANCE_TO_GOAL', 'SUCCESS', 'SPL', 'SOFT_SPL', 'TOP_DOWN_MAP']
 
   DISTANCE_TO_GOAL:
     DISTANCE_TO: VIEW_POINTS
   SUCCESS:
-    SUCCESS_DISTANCE: 0.0
+    SUCCESS_DISTANCE: 0.1
 
 DATASET:
   TYPE: ObjectNav-v1
