--- a/cfg/objectnav_mp3d_train_val_mini.yaml
+++ b/cfg/objectnav_mp3d_train_val_mini.yaml
@@ -1,5 +1,5 @@
 ENVIRONMENT:
-  MAX_EPISODE_STEPS: 100
+  MAX_EPISODE_STEPS: 500
 
 SIMULATOR:
   TURN_ANGLE: 30
@@ -31,8 +31,8 @@ SIMULATOR:
     POSITION: [0, 0.88, 0]
 TASK:
   TYPE: ObjectNav-v1
-  POSSIBLE_ACTIONS: ["MOVE_FORWARD", "TURN_LEFT", "TURN_RIGHT", "LOOK_UP", "LOOK_DOWN"]
-  SUCCESS_DISTANCE: 0.0
+  POSSIBLE_ACTIONS: ["MOVE_FORWARD", "TURN_LEFT", "TURN_RIGHT", "LOOK_UP", "LOOK_DOWN", "STOP"]
+  SUCCESS_DISTANCE: 0.2
 
   SENSORS: ['OBJECTGOAL_SENSOR', 'COMPASS_SENSOR', 'GPS_SENSOR']
   GOAL_SENSOR_UUID: objectgoal
@@ -42,10 +42,10 @@ TASK:
   DISTANCE_TO_GOAL:
     DISTANCE_TO: VIEW_POINTS
   SUCCESS:
-    SUCCESS_DISTANCE: 0.0
+    SUCCESS_DISTANCE: 0.2
 
 DATASET:
   TYPE: ObjectNav-v1
-  SPLIT: train
+  SPLIT: val_mini
   DATA_PATH: "/root/habitat-lab/data/datasets/objectnav/mp3d/v1/{split}/{split}.json.gz"
   SCENES_DIR: "/root/habitat-lab/data/scene_datasets/"
