--- a/cfg/objectnav_mp3d_train_val_mini.yaml
+++ b/cfg/objectnav_mp3d_train_val_mini.yaml
@@ -31,7 +31,7 @@ SIMULATOR:
     POSITION: [0, 0.88, 0]
 TASK:
   TYPE: ObjectNav-v1
-  POSSIBLE_ACTIONS: ["MOVE_FORWARD", "TURN_LEFT", "TURN_RIGHT", "LOOK_UP", "LOOK_DOWN"]
+  POSSIBLE_ACTIONS: ["MOVE_FORWARD", "TURN_LEFT", "TURN_RIGHT", "LOOK_UP", "LOOK_DOWN", "STOP"]
   SUCCESS_DISTANCE: 0.2
 
   SENSORS: ['OBJECTGOAL_SENSOR', 'COMPASS_SENSOR', 'GPS_SENSOR']
