By default use RGBD not semantic

--- a/src/cfg/objectnav_mp3d_train_val_mini.yaml
+++ b/src/cfg/objectnav_mp3d_train_val_mini.yaml
@@ -1,12 +1,12 @@
 ENVIRONMENT:
-  MAX_EPISODE_STEPS: 500
+  MAX_EPISODE_STEPS: 128
 
 SIMULATOR:
   TURN_ANGLE: 30
   TILT_ANGLE: 30
   ACTION_SPACE_CONFIG: "v1"
   AGENT_0:
-    SENSORS: ['RGB_SENSOR', 'DEPTH_SENSOR', 'SEMANTIC_SENSOR']
+    SENSORS: ['RGB_SENSOR', 'DEPTH_SENSOR'] #, 'SEMANTIC_SENSOR']
     HEIGHT: 0.88
     RADIUS: 0.18
   HABITAT_SIM_V0:
@@ -18,8 +18,8 @@ SIMULATOR:
     HFOV: 79
     POSITION: [0, 0.88, 0]
   RGB_SENSOR:
-    WIDTH: 320
-    HEIGHT: 320
+    WIDTH: 32
+    HEIGHT: 32
     HFOV: 79
     POSITION: [0, 0.88, 0]
   DEPTH_SENSOR:
@@ -31,7 +31,7 @@ SIMULATOR:
     POSITION: [0, 0.88, 0]
 TASK:
   TYPE: ObjectNav-v1
-  POSSIBLE_ACTIONS: ["MOVE_FORWARD", "TURN_LEFT", "TURN_RIGHT", "STOP"] #, "LOOK_UP", "LOOK_DOWN"]
+  POSSIBLE_ACTIONS: ["MOVE_FORWARD", "TURN_LEFT", "TURN_RIGHT"] #, "LOOK_UP", "LOOK_DOWN"]
   SUCCESS_DISTANCE: 0.2
 
   SENSORS: ['OBJECTGOAL_SENSOR', 'COMPASS_SENSOR', 'GPS_SENSOR']
