--- a/src/cfg/objectnav_mp3d_train_val_mini.yaml
+++ b/src/cfg/objectnav_mp3d_train_val_mini.yaml
@@ -34,8 +34,8 @@ TASK:
   POSSIBLE_ACTIONS: ["MOVE_FORWARD", "TURN_LEFT", "TURN_RIGHT"] #, "LOOK_UP", "LOOK_DOWN"]
   SUCCESS_DISTANCE: 0.2
 
-  SENSORS: ['OBJECTGOAL_SENSOR', 'COMPASS_SENSOR', 'GPS_SENSOR']
-  GOAL_SENSOR_UUID: objectgoal
+  SENSORS: [] #['OBJECTGOAL_SENSOR', 'COMPASS_SENSOR', 'GPS_SENSOR']
+  # GOAL_SENSOR_UUID: objectgoal
 
   MEASUREMENTS: ['DISTANCE_TO_GOAL', 'SUCCESS', 'SPL', 'SOFT_SPL']
 
