Working cuda 11.1 image

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM nvidia/cudagl:11.0-devel-ubuntu20.04
+FROM nvidia/cudagl:11.1-devel-ubuntu20.04
 ARG DEBIAN_FRONTEND=noninteractive
 RUN apt update && apt install -y git python3 python3-pip vim
 RUN git clone https://github.com/facebookresearch/habitat-sim /root/habitat-sim
@@ -13,6 +13,8 @@ RUN cd /root/habitat-sim && pip3 install -r requirements.txt && python3 setup.py
 
 # Install pytorch for example, and ensure sim works with all our required pkgs
 ARG TORCH=1.8.1
+# Bug: pytorch_geometric 1.8.1 mirror broken
+ARG _TORCH=1.8.0
 ARG TORCHVISION=0.9.1
 ARG CUDA=cu111
 # Pytorch and torch_geometric w/ deps
@@ -20,28 +22,30 @@ RUN pip3 install torch==${TORCH}+${CUDA} \
     torchvision==${TORCHVISION}+${CUDA} \ 
     -f https://download.pytorch.org/whl/torch_stable.html
 RUN pip3 install torch-scatter torch-sparse torch-cluster torch-spline-conv \
-    -f https://pytorch-geometric.com/whl/torch-${TORCH}+${CUDA}.html \
+    -f https://pytorch-geometric.com/whl/torch-${_TORCH}+${CUDA}.html \
     torch_geometric
+# pytorch_geometric can be a bit buggy during install
+RUN python3 -c "import torch; import torch_geometric"
 #RUN cd /root/habitat-sim && python3 examples/example.py
 
 # Build habitat-lab and install habitat-baselines deps
 RUN cd /root/habitat-lab && pip3 install -e . \
-    && pip3 install lmdb webdataset ifcfg
+    && pip3 install lmdb ifcfg webdataset==0.1.40
 
 # Ray rllib
-RUN pip3 install gputil https://s3-us-west-2.amazonaws.com/ray-wheels/latest/ray-2.0.0.dev0-cp38-cp38-manylinux2014_x86_64.whl
+RUN pip3 install gputil https://s3-us-west-2.amazonaws.com/ray-wheels/latest/ray-2.0.0.dev0-cp38-cp38-manylinux2014_x86_64.whl dm-tree lz4 hyperopt tensorboardX
 
 # Detectron
 RUN pip3 install 'git+https://github.com/facebookresearch/detectron2.git'
 
 # Install our deps; webserver for viewing observation and faster PIL
-RUN pip3 uninstall -y pillow && pip3 install flask pillow-simd Flask-SocketIO visdom dnc
+RUN pip3 uninstall -y pillow && pip3 install flask pillow-simd Flask-SocketIO visdom dnc torchviz
 
 # Copy token for gitlab clone
 RUN echo "6RJQmn5AezFsn7Nsqu7N" > /root/token && git clone https://oauth2:$(cat /root/token)@gitlab.developers.cam.ac.uk/cst/prorok-lab/vnav /root/vnav
 
 # Download test and object-goal navigation episodes
-RUN apt install -y unzip && \
+RUN apt install -y unzip curl && \
     # test
     curl http://dl.fbaipublicfiles.com/habitat/habitat-test-scenes.zip --output habitat-test-scenes.zip \
     && unzip habitat-test-scenes.zip -d /root/habitat-lab \
