Huge commit, complete state for large vnav single scene experiment

--- a/src/cfg/pointnav_gibson_train_vae.yaml
+++ b/src/cfg/pointnav_gibson_train_vae.yaml
@@ -37,4 +37,5 @@ TASK:
 DATASET:
   TYPE: PointNav-v1
   SPLIT: train
-  DATA_PATH: /root/habitat-lab/data/datasets/pointnav/gibson/v1/{split}/{split}.json.gz
+  DATA_PATH: "/root/habitat-lab/data/datasets/pointnav/gibson/v1/{split}/{split}.json.gz"
+  SCENES_DIR: "/root/habitat-lab/data/scene_datasets/"
