--- a/src/cfg/objectnav_mp3d_train_vae.yaml
+++ b/src/cfg/objectnav_mp3d_train_vae.yaml
@@ -1,27 +1,17 @@
 ENVIRONMENT:
-  MAX_EPISODE_STEPS: 500
+  MAX_EPISODE_STEPS: 128
 
 SIMULATOR:
   TURN_ANGLE: 30
   TILT_ANGLE: 30
   ACTION_SPACE_CONFIG: "v1"
   AGENT_0:
-    SENSORS: ['RGB_SENSOR', 'DEPTH_SENSOR', 'SEMANTIC_SENSOR']
+    SENSORS: ['DEPTH_SENSOR']
     HEIGHT: 0.88
     RADIUS: 0.18
   HABITAT_SIM_V0:
     GPU_DEVICE_ID: 0
     ALLOW_SLIDING: False
-  SEMANTIC_SENSOR:
-    WIDTH: 32
-    HEIGHT: 32
-    HFOV: 79
-    POSITION: [0, 0.88, 0]
-  RGB_SENSOR:
-    WIDTH: 320
-    HEIGHT: 320
-    HFOV: 79
-    POSITION: [0, 0.88, 0]
   DEPTH_SENSOR:
     WIDTH: 32
     HEIGHT: 32
@@ -31,13 +21,13 @@ SIMULATOR:
     POSITION: [0, 0.88, 0]
 TASK:
   TYPE: ObjectNav-v1
-  POSSIBLE_ACTIONS: ["MOVE_FORWARD", "TURN_LEFT", "TURN_RIGHT", "LOOK_UP", "LOOK_DOWN"]
+  POSSIBLE_ACTIONS: ["MOVE_FORWARD", "TURN_LEFT", "TURN_RIGHT"]
   SUCCESS_DISTANCE: 0.2
 
-  SENSORS: ['OBJECTGOAL_SENSOR', 'COMPASS_SENSOR', 'GPS_SENSOR']
-  GOAL_SENSOR_UUID: objectgoal
+  SENSORS: []
+  GOAL_SENSOR_UUID: pointnav
 
-  MEASUREMENTS: ['DISTANCE_TO_GOAL', 'SUCCESS', 'SPL', 'SOFT_SPL']
+  MEASUREMENTS: ['DISTANCE_TO_GOAL', 'SUCCESS']
 
   DISTANCE_TO_GOAL:
     DISTANCE_TO: VIEW_POINTS
