--- a/src/cfg/objectnav_mp3d_train.yaml
+++ b/src/cfg/objectnav_mp3d_train.yaml
@@ -34,10 +34,10 @@ TASK:
   POSSIBLE_ACTIONS: ["MOVE_FORWARD", "TURN_LEFT", "TURN_RIGHT"] #, "LOOK_UP", "LOOK_DOWN"]
   SUCCESS_DISTANCE: 0.2
 
-  SENSORS: [] #['OBJECTGOAL_SENSOR', 'COMPASS_SENSOR', 'GPS_SENSOR']
+  SENSORS: ['GPS_SENSOR', 'COMPASS_SENSOR'] #['OBJECTGOAL_SENSOR', 'COMPASS_SENSOR', 'GPS_SENSOR']
   # GOAL_SENSOR_UUID: objectgoal
 
-  MEASUREMENTS: ['DISTANCE_TO_GOAL', 'SUCCESS']
+  MEASUREMENTS: ['DISTANCE_TO_GOAL', 'SUCCESS', 'SPL', 'SOFT_SPL']
 
   DISTANCE_TO_GOAL:
     DISTANCE_TO: VIEW_POINTS
@@ -46,6 +46,6 @@ TASK:
 
 DATASET:
   TYPE: ObjectNav-v1
-  SPLIT: val_mini
+  SPLIT: val_mini 
   DATA_PATH: "/root/habitat-lab/data/datasets/objectnav/mp3d/v1/{split}/{split}.json.gz"
   SCENES_DIR: "/root/habitat-lab/data/scene_datasets/"
